--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@ src="https://www.facebook.com/tr?id=1164269989111572&ev=PageView&noscript=1"
                 if (seconds < 0) {
                     clearInterval(redirectTimer);
                     // Redirect to Telegram
-                    window.location.href = "https://t.me/+jXL5f8AzWTYxZGVl";
+                    window.location.href = "https://t.me/+dxp3hmZqqmMyMWM1";
                     return;
                 }
                 
